syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "EnrollmentsGRPCClient";

service GrpcEnrollmentsService {
  rpc GetStudentEnrollments (GrpcGetStudentEnrollmentsRequest) returns (GrpcListEnrollmentsResponse); // not used
  rpc GetClassEnrollments (GrpcGetClassEnrollmentsRequest) returns (GrpcListEnrollmentsResponse); // not used
  rpc GetCourseEnrollments (GrpcGetCourseEnrollmentsRequest) returns (GrpcListEnrollmentsResponse);

  rpc EnrollStudent (GrpcEnrollStudentRequest) returns (GrpcUpdateEnrollmentResponse);
  rpc DeleteEnrollment (GrpcDeleteEnrollmentRequest) returns (GrpcUpdateEnrollmentResponse);
}


// Requests
message GrpcGetStudentEnrollmentsRequest {
  string StudentId = 1;
  oneof optional_id {
    string CourseId = 2;
  }
}

message GrpcGetCourseEnrollmentsRequest {
  string CourseId = 1;
}

message GrpcGetClassEnrollmentsRequest {
  string CourseId = 1;
  string ClassId = 2;
}


message GrpcEnrollStudentRequest {
  string CourseId = 1;
  string ClassId = 2;
  string StudentId = 3;
  string StudentFirstName = 4;
  string StudentLastName = 5;
}

message GrpcDeleteEnrollmentRequest {
  string CourseId = 1;
  string ClassId = 2;
  string StudentId = 3;
}

// Responses
message GrpcEnrollmentResponse {
  string Id = 1;
  string CourseId = 2;
  string ClassId = 3;
  string StudentId = 4;
  google.protobuf.Timestamp EnrollmentDateTime = 5;
  string StudentFirstName = 6;
  string StudentLastName = 7;
}

message GrpcListEnrollmentsResponse {
  repeated GrpcEnrollmentResponse Items = 1;
}

message GrpcListEnrollmentsWithPaginationResponse {
  repeated GrpcEnrollmentResponse Items = 1;
  int32 CurrentPage = 2;
  int32 TotalPages = 3;
  int32 PageSize = 4;
  int32 TotalCount = 5;
}


message GrpcUpdateEnrollmentResponse {
  bool success = 1;
  string message = 2;
}
